--- a/CCFest/app/views/login.scala.html
+++ b/CCFest/app/views/login.scala.html
@@ -19,7 +19,7 @@
 	       <input type="password" name="pass" placeholder="Password" class="form-control">
        </p>
        <div>
-	       <button class="btn btn-primary" type="submit">Login</button>
+	       <button class="btn btn-primary" type="submit"  href="/index">Login</button>
 	       <a class="btn btn-info" style="float:right;" href="/registrar"> Registrar</a>
        </div>
 	}
