--- a/CCFest/app/views/registro.scala.html
+++ b/CCFest/app/views/registro.scala.html
@@ -25,7 +25,7 @@
 	   </p>
 	   <div>
 	       <button class="btn btn-primary"  type="submit">Registrar</button>
-	       <a class="btn btn-info" style="float:right;" href="/login"> Login</a>
+	       <a class="btn btn-info" style="float:right;" href="/"> Login</a>
 	   </div>
 	}
     </div>
